tdf#167171 - fix MATCH function wrong result with inline arrays

Better to use the original algorithm for searching in inline arrays.

Regression from: f7039822c7ad3987326e1c20ea4a745c158f9682

Change-Id: I4a80b7abda96006c16b3fd316225e8e24ace8c09
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187492
Tested-by: Jenkins
Reviewed-by: Balazs Varga <balazs.varga@collabora.com>
(cherry picked from commit aa4b18b720746038206152689ef31231d474b8a4)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187563
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187564